# Omnidocs

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-mkdocs.yml
docfusion/: __init__.py  _version.py
docfusion/tasks/layout_analysis/: base.py
docfusion/tasks/layout_analysis/detectors/: doc_layout_yolo.py  florence.py  paddle.py  rtdetr.py  surya.py
docs/: index.md
docs/getting_started/: installation.md  quickstart.ipynb
docs/tasks/layout_analysis/: overview.md
docs/tasks/layout_analysis/tutorials/: florence.ipynb  paddle.ipynb  rtdetr.ipynb  surya.ipynb  yolo.ipynb
docs/tasks/math_extraction/: overview.md
docs/tasks/math_extraction/tutorials/: latex_ocr.ipynb  unimathnet.ipynb
docs/tasks/ocr/tutorials/: easyocr.ipynb  paddle.ipynb  tesseract.ipynb
docs/tasks/table_extraction/: overview.md
docs/tasks/table_extraction/tutorials/: camelot.ipynb  pdfplumber.ipynb
docs/tasks/text_extraction/tutorials/: pdfplumber.ipynb  pymupdf.ipynb  pypdf2.ipynb
omnidocs/tasks/math_expression_extraction/: base.py
omnidocs/tasks/math_expression_extraction/extractors/: donut.py  latex_ocr.py  nougat.py  texify.py  unimernet.py
